[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ddenv"
authors = [{ name = "Sjors Smits", email = "smits.sjors@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"]
dependencies = [
    "click-spinner >=0.1.10",
    "docker >=5.0.3",
    "typer[all] >=0.4.0",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/smitssjors/ddenv"

[project.scripts]
ddenv = "ddenv:main"
